--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+  --Red: hsl(0, 100%, 74%) 
+  --Green: hsl(154, 59%, 51%)
+  --Blue: hsl(248, 32%, 49%)
+  --Dark-Blue: hsl(249, 10%, 26%) 
+  --Grayish-Blue: hsl(246, 25%, 77%)
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  
+  width: 100%;
+  height: 100vh; /* 100% of the viewport height */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: center; /* Centering content horizontally */
+  align-items: center; /* Centering content vertically */
+  position: relative; /* To position the background image */
 }
 
-.App-link {
-  color: #61dafb;
+.bgimage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the entire wrapper without stretching */
+  z-index: -1; /* Places the image behind the content */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.boxcontainer {
+  display: flex;
+  gap: 20px; /* Adds space between the boxes */
+  z-index: 1; /* Ensures the boxes are above the background image */
+}
+
+.box1, .box2 {
+
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.box1{
+  display: block;
+  padding: 2rem;
+
+}
+
+.box2{
+  display: block;
+}
+
+.header{
+  max-width: 300px;
+  padding-top: 3.5rem;
+}
+
+.paragraph{
+  max-width: 420px;
+  line-height: 1.5;
+  text-align: left;
+  margin: 0;
+}
+
+.firstName{
+display: block;
+margin-top: 2rem;
+height: 2rem;
+border-radius: .3rem;
+}
+
+.lastName{
+  display: block;
+  margin-top: 2rem;
+  height: 2rem;
+  border-radius: .3rem;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.email{
+  display: block;
+  margin-top: 2rem;
+  height: 2rem;
+  border-radius: .3rem;
+}
+
+.password{
+  display: block;
+  margin-top: 2rem;
+  height: 2rem;
+  border-radius: .3rem;
+}
+
+.claim{
+  display: block;
+  margin-top: 2rem;
+  width: 100% ;
+  height: 1rem;
 }
