--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --Red: hsl(0, 100%, 74%) 
-  --Green: hsl(154, 59%, 51%)
-  --Blue: hsl(248, 32%, 49%)
-  --Dark-Blue: hsl(249, 10%, 26%) 
-  --Grayish-Blue: hsl(246, 25%, 77%)
+  position: relative;
+  --Red: hsl(0, 100%, 74%);
+  --Green: hsl(154, 59%, 51%);
+  --Blue: hsl(248, 32%, 49%);
+  --Dark-Blue: hsl(249, 10%, 26%) ;
+  --Grayish-Blue: hsl(246, 25%, 77%);
+}
+
+.wrapper, .container {
+  width: 100%;
+  height: 100vh; /* 100% of the viewport height */
 }
 
 .wrapper {
   background-color: var(--Red);
-  
-  width: 100%;
-  height: 100vh; /* 100% of the viewport height */
+  z-index: -1;
+}
+
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  position: absolute;
 }
 
 .grid-middle{
@@ -29,14 +36,14 @@
 }
 
 .bgimage {
-  background-color: transparent;
-  position: absolute;
+  
+
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensures the image covers the entire wrapper without stretching */
-  z-index: -1; /* Places the image behind the content */
+    /* Places the image behind the content */
 }
 
 
@@ -130,5 +137,26 @@ border-radius: .3rem;
   font-size: 11px;
   justify-content: right;
   align-items: right;
+  visibility: hidden;
+}
+
+.error {
+  color: red;
+  border-color: red;
+  width: 97%;
+  height: 2rem;
+  border-radius: .3rem;
+  
+}
+
+.normalState{
+  color: black;
+  border-color: black;
+  width: 97%;
+  height: 2rem;
+  border-radius: .3rem;
+}
+
+.invis{
   visibility: hidden;
 }
